# opsec.id

./: .gitignore
backend/: Dockerfile  app.db  config.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  utils.py
backend/app/cryptosuites/: __init__.py  eddsa_jcs_2022.py
backend/app/linked_data/: processor.py
backend/app/linked_data/contexts/: __init__.py  credential_v1.py  credential_v2.py  example_v2.py
backend/app/models/: __init__.py  base.py  cid_document.py  credential.py  did_document.py  options.py  presentation.py  proof.py  web_requests.py  web_schemas.py
backend/app/plugins/: __init__.py  askar.py  data_integrity.py  linked_data.py  resolver.py  status_list.py  vc_jose.py
backend/app/routers/: credentials.py  identifiers.py  presentations.py
backend/app/utilities/: examples.py  validations.py
docs/: CNAME  index.html
frontend/: config.py  main.py  pyproject.toml
frontend/app/: __init__.py  manifest.json  pyscript.json  security.py
frontend/app/errors/: __init__.py
frontend/app/models/: user.py
frontend/app/routes/: auth.py  main.py
frontend/app/services/: askar.py
frontend/app/static/css/: styles.css
frontend/app/static/js/: html5-qrcode.js
frontend/app/static/pyscript/: main.py
frontend/app/templates/components/: credentials-list.jinja  invitation_modal.jinja  language.jinja  mobile_header.jinja  notification.jinja  profile.jinja
frontend/app/templates/layouts/: base.jinja  head.jinja  header.jinja  hidden_settings.jinja  search_bar.jinja  sidebar copy.jinja  sidebar.jinja  sidebar2.jinja
(+8 files in other folders)
